confirmInvitations page UI cleanup

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -81,7 +81,7 @@
                                     
                                     <label for="select-native-11"></label>
                                     <div style="position:relative;">
-                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#cc0000;">
+                                    <input id="basicExample" type="text" class="time ui-timepicker-input" autocomplete="off" style="background-color:#88ccc1; color:#cc0000; text-shadow: none;">
                                     <img src="images/mydownarrow.png" style="position:absolute; right:5px; top:8px;" >
                                 </fieldset>
                             </form>
