--- a/findYourPeople.html
+++ b/findYourPeople.html
@@ -62,34 +62,36 @@
                
 
 
-                <!-- This div is for the left panel-->
-                <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="a" id="nav-panel">
-                    <ul data-role="listview">
-                        <li data-icon="profile"><a href="#" data-rel="close"><h4>PROFILE</h4></a></li>
+            <!-- This div is for the left panel-->
+            <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="a" id="nav-panel">
+                <ul data-role="listview">
+                    <li data-icon="profile"><a href="#" data-rel="close"><h4>PROFILE</h4></a></li>
 
-                        <div style="text-align:center;"> <a href="#" class="ui-btn ui-btn-inline ui-icon-imageicon ui-btn-icon-bottom" style="color:#999999;">Upload a Photo</a></div>
+                    <div style="text-align:center;" > 
+                        <img src="" id="LeftPanelProfileImage"/>
+                    </div>
+   <!--a href="#" class="ui-btn ui-btn-inline ui-icon-imageicon ui-btn-icon-bottom" style="color:#999999;">Upload a Photo</a-->
+                 
+                    <label for="firstName" class="ui-hidden-accessible">First Name</label>
+                    <input name="firstName" id="LeftPanelFirstName" placeholder="First Name" value="" type="text" disabled="">
 
+                    <label for="lastName" class="ui-hidden-accessible">Last Name</label>
+                    <input name="lastName" id="LeftPanelLastName" placeholder="Last Name" value="" type="text" disabled="">
 
-                        <label for="firstName" class="ui-hidden-accessible">First Name</label>
-                        <input name="firstName" id="firstName" placeholder="First Name" value="" type="text">
+                    <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
+                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="">
 
-                        <label for="lastName" class="ui-hidden-accessible">Last Name</label>
-                        <input name="lastName" id="lastName" placeholder="Last Name" value="" type="text">
+                    <!--label for="changePassword" class="ui-hidden-accessible">Change Password</label>
+                    <input name="changePassword" id="LeftPanelChangePassword" placeholder="Change Password" value="" type="text"-->
 
-                        <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
-                        <input name="emailAddress" id="emailAddress" placeholder="Email address" value="" type="text">
+                    <label for="bio" class="ui-hidden-accessible">Bio</label>
+                    <input name="bio" id="LeftPanelBio" placeholder="Bio" value="" type="text" disabled="">
 
-                        <label for="changePassword" class="ui-hidden-accessible">Change Password</label>
-                        <input name="changePassword" id="changePassword" placeholder="Change Password" value="" type="text">
+                    <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
 
-                        <label for="bio" class="ui-hidden-accessible">Bio</label>
-                        <input name="bio" id="Bio" placeholder="Bio" value="" type="text">
+                </ul>
 
-                        <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
-
-                    </ul>
-
-                </div><!-- left panel -->
+            </div><!-- left panel -->
 
 
                 <!-- This is for the right panel-->
