confirmInvitations page UI cleanup

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -97,7 +97,7 @@
                     <p style="float: left; margin-left:5%;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px #cc0000;"></p>
 
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmInvite()" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
-                    <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000;">Invites Sent! Happy Tabling!</a>
+                    <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">INVITES SENT</a>
                 </div>
 
 
