--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -54,7 +54,7 @@
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
 
-                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; width:100%; text-transform: uppercase; padding-top:10px;">
+                <div id="userTop" class="ui-grid-b Names" style="background-color:#ffbb00; width:100%; font-family: PT Sans; text-transform: uppercase; padding-top:10px;">
 
                 </div><!-- /grid-b -->
 
