--- a/myTables.html
+++ b/myTables.html
@@ -19,10 +19,11 @@
         <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 
         
-        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/myTablesipad.css">
+        
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
         <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="css/myTables.css">
+        <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/myTablesipad.css">
     </head>
 
     <body>
@@ -80,13 +81,13 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close"></a></li><br>
+                    <li data-icon="delete"><a href="#" data-rel="close"><br></a></li>
                      <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li class="loggedInFields" data-icon="logoicon"><a id="myTable" href="myTables.html">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="pendingInvitations.html">Respond To Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li data-icon="logoicon"><a id="myTable" href="#">Terms and Conditions</a></li>
-                    <li onclick="login()" class="loggedOutFields" data-icon="bell"><a href="">Login</a></li>
-                    <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a href="">Logout</a></li>
+                    <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
+                    <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
 
 
                 </ul>
