--- a/view.html
+++ b/view.html
@@ -125,6 +125,7 @@
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
                     <li data-icon="delete"><a href="#" data-rel="close"><br></a></li>
+                     <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li class="loggedInFields" data-icon="logoicon"><a id="myTable">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a href="">Login</a></li>
