--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
                      <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li class="loggedInFields" data-icon="mytables"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Respond To Invitations<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
-                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Conditions</a></li>
+                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Privacy Policy</a></li>
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
 
