--- a/register.html
+++ b/register.html
@@ -127,7 +127,7 @@
                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;"></a></li><br>
                     <li class="loggedInFields" data-icon="mytables"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
-                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Conditions</a></li>
+                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Privacy Policy</a></li>
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
 
