Keyboard type email - login and register screens

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 
 
                 <label for="userid" class="ui-hidden-accessible">Email</label>
-                <input name="userid" id="userid" placeholder="Email" value="" type="text">
+                <input name="userid" id="userid" placeholder="Email" value="" type="email">
                 <br>
                 <label for="password" class="ui-hidden-accessible">Password</label>
                 <input name="password" id="password" placeholder="Password" value="" type="password">
