--- a/register.html
+++ b/register.html
@@ -69,7 +69,7 @@
                     <input name="homeTown" id="homeTown" placeholder="Select a city" value="" type="text"/>
 
                     <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
-                    <input name="email" id="email" placeholder="Enter your email address" value="" type="text"/>
+                    <input name="email" id="email" placeholder="Enter your email address" value="" type="email"/>
 
                     <label for="password" class="ui-hidden-accessible">Password</label>
                     <input name="password" id="password" placeholder="Select a password" value="" type="password"/>
