fix for register screen header overlap

--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
 
         <div data-role="page" data-theme="a">
 
-            <div data-role="header" id="header" data-position="fixed"> 
+            <div data-role="header" id="header" data-position:"fixed"> 
                 <h3>CREATE A NEW PROFILE</h3>
 
                 <!-- This is the  to initiate side panels-->
