fix for findyourpeople left panel  and applied to other pages

--- a/mood.html
+++ b/mood.html
@@ -118,7 +118,7 @@
 
 
             <!-- This div is for the left panel-->
-            <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="a" id="nav-panel">
+            <div data-role="panel" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
                 <ul data-role="listview">
                     <li data-icon="profile"><a href="#" data-rel="close"><h4>PROFILE</h4></a></li>
 
