--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 
 
             <!-- This is for the left panel-->
-            <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="a" id="nav-panel">
+            <div data-role="panel" data-position-fixed="true" data-display="overlay" data-theme="a" id="nav-panel">
                 <ul data-role="listview">
                     <li data-icon="profile"><a href="#" data-rel="close"><h4>PROFILE</h4></a></li>
                     <!--pending<li><label for="profileName" class="ui-hidden-accessible">Text Input:</label>
