register chnge for usertype

--- a/register.html
+++ b/register.html
@@ -93,11 +93,11 @@
                             <h2>Who are you?</h2>
                           <!--  <form> -->
                                 <!--fieldset id="personTypeList" data-role="controlgroup" data-type="horizontal" data-mini="true"--> 
-                                    <label id="personTypetagId" style="background-color:#b42723; color:#ffffff;"> 
-                                    <input type="radio" name="personTypetagId" value="Recruiter">Recruiter</input>
+                                    <label id="userType" style="background-color:#b42723; color:#ffffff;"> 
+                                    <input type="radio" name="userType" value="Recruiter">Recruiter</input>
                                     </label>
-                                    <label id="personTypetagId" style="background-color:#b42723; color:#ffffff;"> 
-                                    <input type="radio" name="personTypetagId" value="JobSeeker">Job Seeker</input>
+                                    <label id="userType" style="background-color:#b42723; color:#ffffff;"> 
+                                    <input type="radio" name="userType" value="Applicant">Job Seeker</input>
                                     </label>
 
                                 <!--/fieldset-->
