--- a/mood.html
+++ b/mood.html
@@ -20,6 +20,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/mood_1.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/moodipad.css">
+        <link rel="stylesheet" media="screen and (min-width:600px)" type="text/css" href="css/mood600.css">
        <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
        <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption:700' rel='stylesheet' type='text/css'>
        <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
