--- a/register.html
+++ b/register.html
@@ -90,13 +90,13 @@
                     <!--ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
 
                         <li data-role="collapsible" data-collapsed-icon="arrow-d" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true"-->
-                            <h2>Who are you?</h2>
+                         <h2 class="who">Who are you?</h2>
                           <!--  <form> -->
                                 <!--fieldset id="personTypeList" data-role="controlgroup" data-type="horizontal" data-mini="true"--> 
-                                    <label id="userType" style="background-color:#b42723; color:#ffffff;"> 
+                                    <label id="userType" style="background-color:#cc0000; color:#ffffff; font-family: PT Sans; text-shadow: none;"> 
                                     <input type="radio" name="userType" value="Recruiter">Recruiter</input>
                                     </label>
-                                    <label id="userType" style="background-color:#b42723; color:#ffffff;"> 
+                                    <label id="userType" style="background-color:#cc0000; color:#ffffff;font-family: PT Sans; text-shadow: none;"> 
                                     <input type="radio" name="userType" value="Applicant">Job Seeker</input>
                                     </label>
 
@@ -104,7 +104,7 @@
                             <!-- </form> -->
                         <!--/li>
                     </ul-->
-                                      
+                                    <br>  
                     
                     <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
 
@@ -140,7 +140,7 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;"></a></li><br>
+                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;"><br></a></li>
                     <li class="loggedInFields" data-icon="mytables"><a id="myTable" href="#">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites" href="">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li data-icon="logoicon"><a id="myTable" href="#">Terms and Privacy Policy</a></li>
