fix for mood screen dropdown for topics

--- a/mood.html
+++ b/mood.html
@@ -63,7 +63,7 @@
                     <li data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;" class="panel1">
                         <h2>WHAT DO YOU WANT TO TALK ABOUT?</h2>
                         <form>
-                            <fieldset id="topicsList" data-role="controlgroup" data-type="horizontal" data-mini="true"> 
+                            <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
                                
 
                             </fieldset>
