--- a/register.html
+++ b/register.html
@@ -111,7 +111,7 @@
                         <li data-role="collapsible" data-collapsed-icon="arrow-d" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true">
                             <h2>What do you want to talk about?</h2>
                           <!--  <form> -->
-                                <fieldset id="topicsList" data-role="controlgroup" data-type="horizontal" data-mini="true"> 
+                                <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
                                 </fieldset>
                             <!-- </form> -->
                         </li>
