complete UI fix

--- a/register.html
+++ b/register.html
@@ -108,7 +108,7 @@
                     
                     <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
 
-                        <li data-role="collapsible" data-collapsed-icon="arrow-d" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true">
+                        <li data-role="collapsible" data-collapsed-icon="arrow-d" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#ffffff;" class="topic">
                             <h2>What do you want to talk about?</h2>
                           <!--  <form> -->
                                 <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
