waiting indication in registration and confirm invitation page

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -41,14 +41,14 @@
     <body>
 
         <div data-role="page" data-theme="a">
-
             <div data-role="header" id="header" data-position="fixed"> 
                 <h3>FINAL DETAILS</h3>
-
+ 
                 <!-- This is the  to initiate side panels-->
                 <a href="#nav-panel" data-icon="mygear" id="closeleftPanel" class="ios app-theme-none notext" data-iconpos="notext" style="background:#cc0000; margin-left:5px; margin-top:5px;">Menu</a>
                 <a href="#add-form" data-icon="dot" data-iconpos="notext" id="closerightPanel" style="background:#cc0000; margin-right:5px; margin-top:5px;">Add</a>
             </div><!-- /header -->
+          
 
 
 
@@ -64,6 +64,7 @@
 
 
                 <form>
+                    
                     <fieldset id="tags" data-role="controlgroup" data-type="horizontal" data-mini="true" style="background-color:#333333; text-shadow: none;"> 
 
 
@@ -97,7 +98,7 @@
                     <p style="float: left; margin-left:5%;" class="activitypicc"><img id="actpic" src="images/coffeeinvert.svg" class="actpic" style="border: dotted 1px #cc0000;"></p>
 
                     <a href="#" id = "confirmInvitesButtonId" class="confirminvitesButton" onclick="confirmInvite()" style="color:#ffffff; background-color: #cc0000;">SEND OUT INVITES</a>
-                    <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">INVITES SENT</a>
+                    <a id = "InvitesSentId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">SENDING INVITES ... </a>
                 </div>
 
 
