--- a/mood.html
+++ b/mood.html
@@ -31,6 +31,7 @@
     <body>
 
         <div data-role="page" data-theme="a">
+            <img id="loadingImage" src ="images/loading.jpg"/>
 
             <div data-role="header" id="header" data-position="fixed"> 
                 <h3>WHAT ARE YOU IN THE MOOD FOR?</h3>
