--- a/register.html
+++ b/register.html
@@ -120,9 +120,11 @@
 
                     <div style="text-align:center">
                         <button id="submitRegistrationButton">Submit</button>
+                        <button id="sendingRegistrationId" class="confirminvitesButton" style="color:#ffffff; background-color: #cc0000; line-height: 40px; font-family: PT Sans;">Registering .... </button>
+
                     </div>
 </form>                
-
+            <img id="loadingImage" src ="images/loading.jpg"/>
             </div><!-- /content -->
 
 
