--- a/pendingInvitations.html
+++ b/pendingInvitations.html
@@ -84,7 +84,7 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;"><br></a></li>
+                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff; color:#999999; text-align: center; font-weight:700;">BETA<br></a></li>
                      <li data-icon="logoicon"><a id="home" href="#">Home</a></li>
                     <li class="loggedInFields" data-icon="mytables"><a id="myTable">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
                     <li class="loggedInFields" data-icon="bell"><a id="invites">Respond To Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
