--- a/mood.html
+++ b/mood.html
@@ -156,7 +156,7 @@
                 <ul data-role="listview">
                     <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff; color:#999999; text-align: center; font-weight:700;" id="beta"><p>BETA</p><br></a></li>
                     <li class="loggedInFields" data-icon="mytables"><a id="myTable">My Tables<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
-                    <li class="loggedInFields" data-icon="bell"><a id="invites">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
+                    <li class="loggedInFields" data-icon="bell"><a id="invites">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>                   
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
                     <p id="welcomemsg" style="font-style: italic; padding:15px;  line-height: 20px; text-align: center;color:#cc0000; font-family: Helvetica; font-size: 17px; font-weight: 700;">Welcome to TableTribes!</p><p  style="font-style: italic; padding:10px; line-height: 20px; text-align: center;color:#cc0000; font-family: PT Sans; font-size: 15px; font-weight: 700;"> Our vision is to spark a change in how we interact with the people around us by creating tools that enable more meaningful connections on a day-to-day basis. 
