--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <link rel="stylesheet" type="text/css" href="css/mood_1.css">
         <link rel="stylesheet" media="screen and (min-width:768px)" type="text/css" href="css/moodipad.css">
+        <link rel="stylesheet" media="screen and (min-width:600px)" type="text/css" href="css/mood600.css">
        <link href="//fonts.googleapis.com/css?family=PT+Sans Narrow:400,700" rel="stylesheet" type="text/css">
        <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption:700' rel='stylesheet' type='text/css'>
        <link href='http://fonts.googleapis.com/css?family=PT+Sans:700,400' rel='stylesheet' type='text/css'>
@@ -30,6 +31,7 @@
     <body>
 
         <div data-role="page" data-theme="a">
+            <img id="loadingImage" src ="images/loading.jpg"/>
 
             <div data-role="header" id="header" data-position="fixed"> 
                 <h3>WHAT ARE YOU IN THE MOOD FOR?</h3>
@@ -62,7 +64,7 @@
                     <li data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true" style="background-color:#333333;" class="panel1">
                         <h2>WHAT DO YOU WANT TO TALK ABOUT?</h2>
                         <form>
-                            <fieldset id="topicsList" data-role="controlgroup" data-type="horizontal" data-mini="true"> 
+                            <fieldset id="topicsList" data-role="controlgroup" data-mini="true"> 
                                
 
                             </fieldset>
@@ -99,7 +101,7 @@
                     <input id="address" name="location" id="location" placeholder="Location" value="" type="text">
 
                 </ul> <!--ends the preference list-->
-                <br>
+                <br><br>
 
                 <!-- This div is the Find my people button. Inactive once clicked-->
                 <div id="findppl" style="text-align:center">
@@ -128,19 +130,19 @@
    <!--a href="#" class="ui-btn ui-btn-inline ui-icon-imageicon ui-btn-icon-bottom" style="color:#999999;">Upload a Photo</a-->
                  
                     <label for="firstName" class="ui-hidden-accessible">First Name</label>
-                    <input name="firstName" id="LeftPanelFirstName" placeholder="First Name" value="" type="text" disabled="">
+                    <input name="firstName" id="LeftPanelFirstName" placeholder="First Name" value="" type="text" disabled="" style="color:#cc0000;">
 
                     <label for="lastName" class="ui-hidden-accessible">Last Name</label>
-                    <input name="lastName" id="LeftPanelLastName" placeholder="Last Name" value="" type="text" disabled="">
+                    <input name="lastName" id="LeftPanelLastName" placeholder="Last Name" value="" type="text" disabled="" style="color:#cc0000;">
 
                     <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
-                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="">
+                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="" style="color:#cc0000;">
 
                     <!--label for="changePassword" class="ui-hidden-accessible">Change Password</label>
                     <input name="changePassword" id="LeftPanelChangePassword" placeholder="Change Password" value="" type="text"-->
 
                     <label for="bio" class="ui-hidden-accessible">Bio</label>
-                    <input name="bio" id="LeftPanelBio" placeholder="Bio" value="" type="text" disabled="">
+                    <input name="bio" id="LeftPanelBio" placeholder="Bio" value="" type="text" disabled="" style="color:#cc0000;">
 
                     <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
 
@@ -152,12 +154,16 @@
             <!-- This is for the right panel-->
             <div data-role="panel" data-position="right" data-position-fixed="true" data-display="overlay" data-theme="a" id="add-form">
                 <ul data-role="listview">
-                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff;"><br><br></a></li>
-                    <li class="loggedInFields" data-icon="mytables"><a id="myTable">My Tables<span id="tableNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>
-                    <li class="loggedInFields" data-icon="bell"><a id="invites">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#b42723;">0</span></a></li>                    <li data-icon="logoicon"><a id="myTable" href="#">Terms and Condition</a></li>
+                    <li data-icon="delete"><a href="#" data-rel="close" style="background-color: #fff; color:#999999; text-align: center; font-weight:700;" id="beta"><p>BETA</p></a></li>
+                    <li class="loggedInFields" data-icon="mytables"><a id="myTable">My Tables<span id="tableNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>
+                    <li class="loggedInFields" data-icon="bell"><a id="invites">Pending Invitations<span id="inviteNo" class="ui-li-count" style="color:#cc0000;">0</span></a></li>                   
                     <li onclick="login()" class="loggedOutFields" data-icon="bell"><a id="login" href="">Login</a></li>
                     <li data-icon="logouticon" onclick="logout()" class="loggedInFields" data-icon="bell"><a id="logout" href="">Logout</a></li>
+                    <p id="welcomemsg">Welcome to TableTribes!</p><p id="vision"> Our vision is to spark a change in how we interact with the people around us by creating tools that enable more meaningful connections on a day-to-day basis. 
 
+We’re building something new, and as an early-stage startup, your participation in our survey during this beta phase is crucial to us right now because it gives us feedback on how to make it better.<br><br>We’re keeping track of the issues but would also love to hear what happened from your perspective. As an early-stage startup, your participation in our survey during this beta phase is crucial to us right now.<br><br><a href="https://www.surveymonkey.com/s/TTbeta_mediarise" style="text-decoration: none;">Go To Survey</a> <br>
+
+<br>Thank you for being part of this journey!</p>
 
                 </ul>
             </div><!--  right panel -->
