validations for selected TT zone

--- a/confirmInvitations.html
+++ b/confirmInvitations.html
@@ -94,7 +94,7 @@
                 <label for="location" class="ui-hidden-accessible">Location:</label>
                 <input id="address" name="location" id="location" placeholder="Location" value="" type="text">
 
-                <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
+                <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px; padding-left: 20px; padding-right: 20px;" data-mini="true">
                 <li id="whereMenu" data-role="collapsible" data-collapsed-icon="arrow-d ui-nodisc-icon" data-expanded-icon="arrow-u ui-nodisc-icon" data-iconpos="right" class="time" data-inset="false" data-mini="true" style="background-color:#ffbb00;">
                         <h2 id="whereText" value="">WHERE?</h2>
                         <ul data-role="listview" data-mini="true">
