Complete UI changes for all screens

--- a/view.html
+++ b/view.html
@@ -103,19 +103,19 @@
    <!--a href="#" class="ui-btn ui-btn-inline ui-icon-imageicon ui-btn-icon-bottom" style="color:#999999;">Upload a Photo</a-->
                  
                     <label for="firstName" class="ui-hidden-accessible">First Name</label>
-                    <input name="firstName" id="LeftPanelFirstName" placeholder="First Name" value="" type="text" disabled="">
+                    <input name="firstName" id="LeftPanelFirstName" placeholder="First Name" value="" type="text" disabled="" style="color:blue; font-weight: bold;">>
 
                     <label for="lastName" class="ui-hidden-accessible">Last Name</label>
-                    <input name="lastName" id="LeftPanelLastName" placeholder="Last Name" value="" type="text" disabled="">
+                    <input name="lastName" id="LeftPanelLastName" placeholder="Last Name" value="" type="text" disabled="" style="color:blue; font-weight: bold;">>
 
                     <label for="emailAddress" class="ui-hidden-accessible">Email address</label>
-                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="">
+                    <input name="emailAddress" id="LeftPanelEmailAddress" placeholder="Email address" value="" type="text" disabled="" style="color:blue; font-weight: bold;">>
 
                     <!--label for="changePassword" class="ui-hidden-accessible">Change Password</label>
                     <input name="changePassword" id="LeftPanelChangePassword" placeholder="Change Password" value="" type="text"-->
 
                     <label for="bio" class="ui-hidden-accessible">Bio</label>
-                    <input name="bio" id="LeftPanelBio" placeholder="Bio" value="" type="text" disabled="">
+                    <input name="bio" id="LeftPanelBio" placeholder="Bio" value="" type="text" disabled="" style="color:blue; font-weight: bold;">>
 
                     <div style="text-align:center";><img src="images/panel-logoicon.png"></div>
 
