updated user type to wall and artist

--- a/register.html
+++ b/register.html
@@ -94,10 +94,10 @@
                           <!--  <form> -->
                                 <!--fieldset id="personTypeList" data-role="controlgroup" data-type="horizontal" data-mini="true"--> 
                                     <label id="userType" style="background-color:#cc0000; color:#ffffff; font-family: PT Sans; text-shadow: none;"> 
-                                    <input type="radio" name="userType" value="Recruiter">Recruiter</input>
+                                    <input type="radio" name="userType" value="Recruiter">Wall</input>
                                     </label>
                                     <label id="userType" style="background-color:#cc0000; color:#ffffff;font-family: PT Sans; text-shadow: none;"> 
-                                    <input type="radio" name="userType" value="Applicant">Job Seeker</input>
+                                    <input type="radio" name="userType" value="Applicant">Artist</input>
                                     </label>
 
                                 <!--/fieldset-->
