Updating the image upload text

--- a/register.html
+++ b/register.html
@@ -51,9 +51,8 @@
 
 
             <div role="main" class="ui-content jqm-content jqm-fullwidth"> <!-- Important-->
-
-
-<input type=hidden role="uploadcare-uploader" data-system-dialog="true" data-images-only="true">
+<h2 class="who" style="text-align:center;">Please upload your profile image</h2>
+<input type=hidden role="uploadcare-uploadeUpload your" data-system-dialog="true" data-images-only="true" >
 
 
 <div style="text-align:center;" id="uploadImgDiv">  
@@ -69,7 +68,7 @@
                           <!--  <form> -->
                                 <!--fieldset id="personTypeList" data-role="controlgroup" data-type="horizontal" data-mini="true"--> 
                                     <label id="userType" style="background-color:#cc0000; color:#ffffff; font-family: PT Sans; text-shadow: none;"> 
-                                    <input type="radio" name="userType" value="Recruiter">Wall</input>
+                                    <input type="radio" name="userType" value="Recruiter">Funder</input>
                                     </label>
                                     <label id="userType" style="background-color:#cc0000; color:#ffffff;font-family: PT Sans; text-shadow: none;"> 
                                     <input type="radio" name="userType" value="Applicant">Artist</input>
