Commenting out the usertype field

--- a/register.html
+++ b/register.html
@@ -64,20 +64,14 @@
                     <!--ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
 
                         <li data-role="collapsible" data-collapsed-icon="arrow-d" data-expanded-icon="arrow-u" data-iconpos="right" data-inset="false" data-mini="true"-->
-                         <h2 class="who">Who are you?</h2>
-                          <!--  <form> -->
-                                <!--fieldset id="personTypeList" data-role="controlgroup" data-type="horizontal" data-mini="true"--> 
+                         <!--h2 class="who">Who are you?</h2>
                                     <label id="userType" style="background-color:#cc0000; color:#ffffff; font-family: PT Sans; text-shadow: none;"> 
                                     <input type="radio" name="userType" value="Recruiter">Funder</input>
                                     </label>
                                     <label id="userType" style="background-color:#cc0000; color:#ffffff;font-family: PT Sans; text-shadow: none;"> 
                                     <input type="radio" name="userType" value="Applicant">Artist</input>
-                                    </label>
+                                    </label-->
 
-                                <!--/fieldset-->
-                            <!-- </form> -->
-                        <!--/li>
-                    </ul-->
                                     <br>  
                     
                     <ul data-role="listview" style="margin-bottom:10px; padding-top: 10px;" data-mini="true">
